tests/errors/sem_test5.py
# sem_test5.py
def main(a, b):
    c = a + b
    print(c)

main()